learning/istio/app-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: web
    istio-injection: enabled
  name: web
