learning/istio/app-manifests/deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: first-app
    version: v2
  name: web-v2
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-app
      version: v2
  template:
    metadata:
      labels:
        app: first-app
        version: v2
    spec:
      containers:
      - image: aputra/myapp-lesson155:latest
        name: first-app
        ports:
        - name: http
          containerPort: 8080
