learning/istio/app-manifests/ingress-gateway.yaml
# use this for ingress pourpose

apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: api
  namespace: web
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "helloworldmeet.example"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "helloworldmeet.example"
    tls:
      credentialName: my-tls-secret
      mode: SIMPLE
